# matter-stream

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Cargo.toml  EXAMPLES.md  LICENSE  Makefile  README.md  VM_SPEC.md  run_card_session.sh  run_tests.sh
crates/font-atlas-gen/: Cargo.toml
crates/font-atlas-gen/src/: lib.rs
crates/matterstream/: Cargo.toml
crates/matterstream-common/: Cargo.toml
crates/matterstream-common/src/: backend.rs  font.rs  gfx_utils.rs  lib.rs  pipeline.rs  sdf.rs
crates/matterstream-compiler/: Cargo.toml
crates/matterstream-compiler/src/: asm_compiler.rs  compiler.rs  lib.rs
crates/matterstream-compiler/tests/: compiler_tests.rs  map_compile.rs
crates/matterstream-core/: Cargo.toml
crates/matterstream-core/src/: archive.rs  arena.rs  aslr.rs  asm_compiler.rs  ast_hook.rs  ast_tsx.rs  builder.rs  lib.rs  ops.rs  registers.rs  rpn.rs  state_stack.rs  stream.rs  tier0.rs  tier2.rs  tkv.rs  ui_vm.rs
crates/matterstream-ext-mtd1/: Cargo.toml
crates/matterstream-ext-mtd1/examples/: letter_grid.rs  mtd1_render.rs  mtd1_window.rs
crates/matterstream-ext-mtd1/src/: lib.rs  links.rs  or_page.rs  tsx_to_mtd1.rs
crates/matterstream-ext-mtd1/tests/: wgpu_msdf_render.rs  wgpu_tufte_render.rs
crates/matterstream-ext-skll/: Cargo.toml
crates/matterstream-ext-skll/src/: lib.rs
crates/matterstream-font/: Cargo.toml
crates/matterstream-font/src/: atlas.rs  glyph_table.rs  lib.rs  shaper.rs
crates/matterstream-leah/: Cargo.toml
crates/matterstream-leah/src/: main.rs
crates/matterstream-loader/: Cargo.toml
crates/matterstream-loader/fuzz/: .gitignore  Cargo.toml
crates/matterstream-loader/fuzz/fuzz_targets/: fuzz_font_atlas.rs
crates/matterstream-loader/src/: fonts.rs  lib.rs
crates/matterstream-mtd1/: Cargo.toml
crates/matterstream-mtd1-format/: Cargo.toml
crates/matterstream-mtd1-format/src/: lib.rs
crates/matterstream-mtd1/examples/: letter_grid.rs  mtd1_render.rs  mtd1_window.rs
crates/matterstream-mtd1/src/: lib.rs  mtd1_format.rs  mtd1_to_sdf.rs
crates/matterstream-mtd1/tests/: wgpu_msdf_render.rs  wgpu_tufte_render.rs
crates/matterstream-mtd1/tests/fixtures/: tufte_demo.tsx
crates/matterstream-packages/: Cargo.toml
crates/matterstream-packages/src/: lib.rs
crates/matterstream-packaging/: Cargo.toml
crates/matterstream-packaging/fuzz/: Cargo.toml
crates/matterstream-packaging/fuzz/fuzz_targets/: fuzz_archive.rs  fuzz_tkv.rs
crates/matterstream-packaging/src/: archive.rs  builder.rs  fnta.rs  lib.rs  loader.rs  tkv.rs
crates/matterstream-packaging/tests/: archive.rs  tkv.rs
crates/matterstream-parser/: Cargo.toml
crates/matterstream-parser/src/: lib.rs
crates/matterstream-parser/tests/: parser_tests.rs
crates/matterstream-pkg-ui/: Cargo.toml
crates/matterstream-pkg-ui/src/: lib.rs
crates/matterstream-processor/: Cargo.toml
crates/matterstream-processor/src/: lib.rs
crates/matterstream-processor/tests/: processor_tests.rs
crates/matterstream-renderer/: Cargo.toml
crates/matterstream-renderer/src/: lib.rs
crates/matterstream-ui/: Cargo.toml
crates/matterstream-ui-cpu-compute/: Cargo.toml
crates/matterstream-ui-cpu-compute/src/: lib.rs
crates/matterstream-ui-cpu-raster/: Cargo.toml
crates/matterstream-ui-cpu-raster/src/: lib.rs
crates/matterstream-ui-gpu/: Cargo.toml
crates/matterstream-ui-gpu/src/: lib.rs  shader_render.wgsl
crates/matterstream-ui-soft/: Cargo.toml
crates/matterstream-ui-soft/src/: lib.rs
crates/matterstream-ui/src/: actions.rs  lib.rs  render.rs  types.rs
crates/matterstream-vm/: Cargo.toml
crates/matterstream-vm-addressing/: Cargo.toml
crates/matterstream-vm-addressing/fuzz/: Cargo.toml
crates/matterstream-vm-addressing/fuzz/fuzz_targets/: fuzz_asym.rs  fuzz_ordinal.rs
crates/matterstream-vm-addressing/src/: addressing.rs  aslr.rs  fqa.rs  json_to_tkv.rs  lib.rs  oid.rs  oid_index.rs  ova.rs  tkv_key.rs  tkv_ops.rs
crates/matterstream-vm-addressing/tests/: fqa_ova.rs
crates/matterstream-vm-arena/: Cargo.toml
crates/matterstream-vm-arena/src/: arena.rs  dmove.rs  lib.rs
crates/matterstream-vm-arena/tests/: arena.rs
crates/matterstream-vm-asm/: Cargo.toml
crates/matterstream-vm-scl/: Cargo.toml
crates/matterstream-vm/examples/: connect4.rs  flappy_bird.rs  game2048.rs  oid_import_demo.rs  package_demo.rs  user_atomics_demo.rs
crates/matterstream-vm/examples/_disabled/: flappy_bird.rs
crates/matterstream-vm/src/: event.rs  gpu.rs  hooks.rs  host.rs  lib.rs  or_page.rs  rpn.rs  shader_compute.wgsl  shared.rs  skill_host.rs  ui_vm.rs  user_call_handler.rs  vm_compiler.rs  vm_handle.rs
crates/matterstream-vm/tests/: event.rs  hooks.rs  oid_ops.rs  rpn_basic.rs  rpn_float_ops.rs  rpn_new_ops.rs  ui_draw.rs  ui_feature.rs  vm_extension.rs
crates/matterstream/examples/: card_session.json  compile-tsx.rs  components.rs  dashboard.rs  example.notsx  execute-ops.rs  full-pipeline.rs  login_form.tsx  oid-import-ui.rs  parse-tsx.rs  rpn-arena.rs  run-cards.rs  run-tsx.rs  ui-demo.rs  window-builder.rs  window-gpu.rs  window-pipeline.rs  window-slabs.rs
crates/matterstream/examples/_disabled/: run-cards.rs  run-tsx.rs  ui-demo.rs  vm-pipeline.rs
crates/matterstream/examples/cards/: contacts.tsx  google_connection.tsx  inbox.tsx  login.tsx  mobile_home.tsx  prompt_bar.tsx  prompt_bar_v2.tsx  ribbon_demo.tsx  vibe_placeholder.tsx
crates/matterstream/examples/cards/components/: inbox_card.tsx  prompt_bar.tsx  status_bar.tsx
crates/matterstream/src/: lib.rs
crates/matterstream/tests/: archive.rs  arena.rs  builder.rs  component_import.rs  fqa_ova.rs  integration.rs  parser.rs  rpn.rs  scl.rs  stress.rs  tkv.rs  ui_vm.rs  validation.rs
docs/: COMPONENT_STATE.md  MISSING.md  OID_V1.md  RIBBON.md  STACKVM_UI_SPEC.md  TKV_ARENA_FORMAT.md  UI_GPU_REFACTOR.md  UI_VM_DESIGN.md  VM_Changes_20260324.md  VM_EXAMPLES.md  VM_SPEC.md  VM_msm1.md
src/: builder.rs  dmove.rs  lib.rs  ops.rs  parser.rs  rpn.rs  stream.rs  tier1.rs  tier3.rs  tkv.rs
src-moved/: lib.rs
tests/: fuzz.rs  parser.rs  rpn.rs
(+13 files in other folders)
