[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
futures = "0.3"
oxc_parser = "0.13"
oxc_allocator = "0.13"
oxc_ast = "0.13"
oxc_span = "0.13"
oxc_syntax = "0.13"
winit = "0.30.12"
softbuffer = "0.4.8"
rusttype = "0.9.3"
image = "0.25.9"
smol = "2"
smol_str = "0.1"
async-io = "2.6.0"
tempfile = "3"
matterstream-core = { path = "crates/matterstream-core" }
matterstream-compiler = { path = "crates/matterstream-compiler" }
matterstream-renderer = { path = "crates/matterstream-renderer" }
matterstream-loader = { path = "crates/matterstream-loader" }
font-atlas-gen = { path = "crates/font-atlas-gen" }
matterstream-packages = { path = "crates/matterstream-packages" }
matterstream = { path = "crates/matterstream" }
