[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
# External deps
futures = "0.3"
oxc_parser = "0.13"
oxc_allocator = "0.13"
oxc_ast = "0.13"
oxc_span = "0.13"
winit = "0.30.12"
softbuffer = "0.4.8"
bytemuck = { version = "1", features = ["derive"] }
smol = "2"
tempfile = "3"
async-io = "2.6.0"

# Internal workspace crates
matterstream-core = { path = "crates/matterstream-core" }
matterstream-vm = { path = "crates/matterstream-vm" }
matterstream-vm-asm = { path = "crates/matterstream-vm-asm" }
matterstream-vm-addressing = { path = "crates/matterstream-vm-addressing" }
matterstream-vm-arena = { path = "crates/matterstream-vm-arena" }
matterstream-packaging = { path = "crates/matterstream-packaging" }
matterstream-vm-scl = { path = "crates/matterstream-vm-scl" }
matterstream = { path = "crates/matterstream" }
