[package]
name = "matterstream-core"
version = "0.2.0"
edition = "2021"
description = "UI ISA core — ops, registers, tiers, stream executor"
license = "Apache-2.0"

[dependencies]
matterstream-vm-addressing = { path = "../matterstream-vm-addressing" }
matterstream-vm-arena = { path = "../matterstream-vm-arena" }
matterstream-vm-scl = { path = "../matterstream-vm-scl" }
matterstream-packaging = { path = "../matterstream-packaging" }
matterstream-vm = { path = "../matterstream-vm" }
futures = "0.3"

[features]
compiler = ["dep:oxc_parser", "dep:oxc_allocator", "dep:oxc_ast", "dep:oxc_span", "dep:matterstream-vm-asm"]

[dependencies.oxc_parser]
version = "0.13"
optional = true

[dependencies.oxc_allocator]
version = "0.13"
optional = true

[dependencies.oxc_ast]
version = "0.13"
optional = true

[dependencies.oxc_span]
version = "0.13"
optional = true

[dependencies.matterstream-vm-asm]
path = "../matterstream-vm-asm"
optional = true

[dev-dependencies]
async-io = "2.6.0"
smol = "2"
tempfile = "3"
