[package]
name = "matterstream-core"
version = "0.2.0"
edition = "2021"
description = "UI ISA core — ops, registers, tiers, stream executor"
license = "Apache-2.0"

[dependencies]
matterstream-vm-addressing = { path = "../matterstream-vm-addressing" }
matterstream-vm-arena = { path = "../matterstream-vm-arena" }
matterstream-vm-scl = { path = "../matterstream-vm-scl" }
matterstream-packaging = { path = "../matterstream-packaging" }
matterstream-vm = { path = "../matterstream-vm" }
futures = "0.3"


[dev-dependencies]
async-io = "2.6.0"
smol = "2"
tempfile = "3"
