[package]
name = "matterstream-loader"
version = "0.1.0"
edition = "2021"
description = "MatterStream font and image resource loading"
license = "Apache-2.0"

[dependencies]
matterstream-core = { workspace = true }
anyhow = "1.0"
rusttype = { workspace = true, optional = true }
image = { workspace = true, optional = true }

[features]
ttf = ["dep:rusttype", "dep:image"]
