[package]
name = "matterstream-pkg-ui"
version = "0.2.0"
edition = "2021"
description = "@chitin/ui package: MarkdownReadView and other native UI components"

[dependencies]
matterstream-vm = { path = "../matterstream-vm" }
matterstream-vm-arena = { path = "../matterstream-vm-arena" }
matterstream-vm-asm = { path = "../matterstream-vm-asm" }
matterstream-vm-addressing = { path = "../matterstream-vm-addressing" }
matterstream-common = { path = "../matterstream-common" }
matterstream-ext-mtd1 = { path = "../matterstream-ext-mtd1" }
log = "0.4"
