[package]
name = "matterstream-renderer"
version = "0.1.0"
edition = "2021"
description = "MatterStream softbuffer/winit rendering"
license = "Apache-2.0"

[dependencies]
matterstream-core = { workspace = true }
winit = { workspace = true }
softbuffer = { workspace = true }

[dev-dependencies]
matterstream-compiler = { workspace = true }
smol = { workspace = true }
