[package]
name = "matterstream-ui-cpu-compute"
version = "0.2.0"
edition = "2021"
description = "CPU compute stage — prepares RenderFrame from VM output"
license = "Apache-2.0"

[dependencies]
matterstream-common = { path = "../matterstream-common" }

[dev-dependencies]
matterstream-common = { path = "../matterstream-common" }
