[package]
name = "matterstream-ui-gpu"
version = "0.2.0"
edition = "2021"
description = "GPU SDF renderer for MatterStream UI — wgpu-based fragment shader pipeline"
license = "Apache-2.0"

[dependencies]
matterstream-common = { path = "../matterstream-common" }
wgpu = "29"
bytemuck = { version = "1", features = ["derive"] }
