[package]
name = "matterstream-ui"
version = "0.2.0"
edition = "2021"
description = "UI types, CPU-side rasterizer, hit testing, and action collection"
license = "Apache-2.0"

[dependencies]
matterstream-common = { path = "../matterstream-common" }
matterstream-packaging = { path = "../matterstream-packaging" }
