[package]
name = "matterstream-vm"
version = "0.1.0"
edition = "2021"

[dependencies]
matterstream-vm-addressing = { path = "../matterstream-vm-addressing" }
matterstream-vm-arena = { path = "../matterstream-vm-arena" }
matterstream-packaging = { path = "../matterstream-packaging" }
bytemuck = { version = "1", features = ["derive"] }

[dev-dependencies]
matterstream-vm-asm = { path = "../matterstream-vm-asm" }

[[example]]
name = "connect4"

[[example]]
name = "game2048"

[[example]]
name = "flappy_bird"

[[example]]
name = "package_demo"
