[package]
name = "matterstream-vm"
version = "0.1.0"
edition = "2021"

[dependencies]
matterstream-vm-addressing = { path = "../matterstream-vm-addressing" }
matterstream-vm-arena = { path = "../matterstream-vm-arena" }
matterstream-packaging = { path = "../matterstream-packaging" }
matterstream-ui = { path = "../matterstream-ui", optional = true }
bytemuck = { version = "1", features = ["derive"] }

[features]
default = ["ui"]
ui = ["dep:matterstream-ui"]

[dev-dependencies]
matterstream-vm-asm = { path = "../matterstream-vm-asm" }

[[example]]
name = "connect4"

[[example]]
name = "game2048"

[[example]]
name = "flappy_bird"

[[example]]
name = "package_demo"

[[example]]
name = "oid_import_demo"
