[package]
name = "matterstream-vm"
version = "0.2.0"
edition = "2021"

[dependencies]
matterstream-vm-addressing = { path = "../matterstream-vm-addressing" }
matterstream-vm-arena = { path = "../matterstream-vm-arena" }
matterstream-packaging = { path = "../matterstream-packaging" }
matterstream-common = { path = "../matterstream-common" }
matterstream-ui = { path = "../matterstream-ui", optional = true }
bytemuck = { version = "1", features = ["derive"] }

[features]
default = ["ui"]
ui = ["dep:matterstream-ui"]

[dev-dependencies]
matterstream-vm-asm = { path = "../matterstream-vm-asm" }
matterstream-common = { path = "../matterstream-common" }

