[package]
name = "matterstream"
version = "0.1.0"
edition = "2021"
description = "UI ISA treating UI as a stream of immutable instructions against register-mapped memory"
license = "Apache-2.0"

[dependencies]
matterstream-core = { path = "../matterstream-core" }
matterstream-vm = { path = "../matterstream-vm" }
matterstream-vm-asm = { path = "../matterstream-vm-asm" }
matterstream-vm-addressing = { path = "../matterstream-vm-addressing" }
matterstream-vm-arena = { path = "../matterstream-vm-arena" }
matterstream-packaging = { path = "../matterstream-packaging" }
matterstream-vm-scl = { path = "../matterstream-vm-scl" }

[dependencies.matterstream-ui-soft]
path = "../matterstream-ui-soft"
optional = true

[features]
compiler = ["matterstream-core/compiler"]
ui-softbuffer = ["dep:matterstream-ui-soft"]


[dev-dependencies]
matterstream-common = { path = "../matterstream-common" }
matterstream-ui = { path = "../matterstream-ui" }
async-io = "2.6.0"
smol = "2"
tempfile = "3"
winit = "0.30.12"
softbuffer = "0.4.8"
