[package]
name = "matterstream"
version = "0.2.0"
edition = "2021"
description = "UI ISA treating UI as a stream of immutable instructions against register-mapped memory"
license = "Apache-2.0"

[dependencies]
matterstream-core = { path = "../matterstream-core" }
matterstream-vm = { path = "../matterstream-vm" }
matterstream-vm-asm = { path = "../matterstream-vm-asm" }
matterstream-vm-addressing = { path = "../matterstream-vm-addressing" }
matterstream-vm-arena = { path = "../matterstream-vm-arena" }
matterstream-packaging = { path = "../matterstream-packaging" }
matterstream-vm-scl = { path = "../matterstream-vm-scl" }

[dependencies.matterstream-ui-soft]
path = "../matterstream-ui-soft"
optional = true

[dependencies.matterstream-compiler]
path = "../matterstream-compiler"
optional = true

[dependencies.matterstream-ui-gpu]
path = "../matterstream-ui-gpu"
optional = true

[features]
compiler = ["dep:matterstream-compiler"]
ui-softbuffer = ["dep:matterstream-ui-soft"]
ui-gpu = ["dep:matterstream-ui-gpu"]


[dev-dependencies]
matterstream-common = { path = "../matterstream-common" }
matterstream-ui = { path = "../matterstream-ui" }
wgpu = "29"
pollster = "0.4"
async-io = "2.6.0"
smol = "2"
tempfile = "3"
winit = "0.30.12"
softbuffer = "0.4.8"
