[package]
name = "matterstream-packaging-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
matterstream-packaging = { path = ".." }
matterstream-vm-addressing = { path = "../../matterstream-vm-addressing" }

[[bin]]
name = "fuzz_tkv"
path = "fuzz_targets/fuzz_tkv.rs"
doc = false

[[bin]]
name = "fuzz_archive"
path = "fuzz_targets/fuzz_archive.rs"
doc = false

[workspace]
